syntax = "proto3";

import "scalapb/scalapb.proto";

option (scalapb.options) = {
  package_name: "org.telecomsudparis.smap"
  flat_package: true
};

package pb;

message MapCommand {
    Item item = 1;
    string startKey = 2;
    int32 recordcount = 3;
    string callerId = 4;
    string operationUuid = 5;
    enum OperationType {
        INSERT = 0;
        GET = 1;
        UPDATE = 2;
        DELETE = 3;
        SCAN = 4;
    }
    OperationType operationType = 6;
}

message Item {
    string key = 1;
    map<string, string> fields = 2;
}

message ResultsCollection {
    repeated Item results = 1;
}

service smap {
    rpc ExecuteCmd(MapCommand) returns (ResultsCollection) {}
}